0611_게시판 대댓글 등록 관련 수정

--- a/mywork2/src/main/resources/sql/board/boardsql.properties
+++ b/mywork2/src/main/resources/sql/board/boardsql.properties
@@ -6,3 +6,5 @@ updateBoardReadCount=UPDATE BOARD SET BOARD_READCOUNT=BOARD_READCOUNT+1 WHERE BO
 
 insertBoardComment=INSERT INTO BOARD_COMMENT VALUES(SEQ_BOARD_COMMENT_NO.NEXTVAL, ?, ?, ?, ?, ?, DEFAULT)
 selectBoardCommentByNo=SELECT * FROM board_comment WHERE BOARD_REF=?
+
+insertBoardCommentReply=INSER INTO BOARD_COMMENT VALUES()
