--- a/mywork2/src/main/resources/driver.properties
+++ b/mywork2/src/main/resources/driver.properties
@@ -1,4 +1,4 @@
 driver=oracle.jdbc.driver.OracleDriver
-url=jdbc:oracle:thin:@14.36.141.71:10000:xe
-user=web
-pw=web
+url=jdbc:oracle:thin:@localhost:1521:xe
+user=WEB
+pw=WEB
