--- a/spring/src/main/webapp/WEB-INF/web.xml
+++ b/spring/src/main/webapp/WEB-INF/web.xml
@@ -6,6 +6,7 @@
 		<param-name>contextConfigLocation</param-name>
 		<param-value>
 			/WEB-INF/spring/root-context.xml
+			/WEB-INF/spring/security-context.xml
 		</param-value>
 	</context-param>
 	
@@ -48,6 +49,10 @@
 		<filter-name>encodingFilter</filter-name>
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
+	<error-page>
+		<error-code>500</error-code>
+		<location>/WEB-INF/views/common/error/error500.jsp</location>
+	</error-page>
 </web-app>
 
 
